--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,9 +47,9 @@
     "aggregate-error": "3.0.1",
     "globby": "10.0.1",
     "is-glob": "4.0.1",
+    "resolve-from": "5.0.0",
     "tslib": "1.10.0",
-    "valid-url": "1.0.9",
-    "resolve-from": "5.0.0"
+    "valid-url": "1.0.9"
   },
   "publishConfig": {
     "access": "public",
