--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,27 @@ jobs:
                 echo "Fork PR: ${{github.repository}}"
                 echo "Skipping canary publish due to a fork/PR..."
             fi
+  test-on-windows:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout Master
+        uses: actions/checkout@v1
+      - name: Use Node
+        uses: actions/setup-node@master
+        with:
+          node-version: '13.x'
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - name: Install Dependencies using Yarn
+        run: yarn install --frozen-lockfile
+      - name: Build
+        run: yarn build
+      - name: Test
+        run: yarn test
