--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,41 @@ name: CI
 on: [push]
 
 jobs:
-  build:
+  publish-canary:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Master
+        uses: actions/checkout@v1
+      - name: Use Node
+        uses: actions/setup-node@master
+        with:
+          node-version: '13.x'
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - name: Install Dependencies using Yarn
+        run: yarn install --frozen-lockfile
+      - name: Build
+        run: yarn build
+      - name: Publish Canary
+        env: # Or as an environment variable
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+        run: |
+            if [ "${{github.repository}}" == "ardatan/graphql-toolkit" ] && [ "${{ secrets.NODE_AUTH_TOKEN }}" != "" ]
+            then
+                echo "//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" > .npmrc
+                npm run ci:release:canary
+            else    
+                echo "Fork PR: ${{github.repository}}"
+                echo "Skipping canary publish due to a fork/PR..."
+            fi
+  test-on-linux:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Master
@@ -28,18 +62,6 @@ jobs:
         run: yarn build
       - name: Test
         run: yarn test
-      - name: Publish Canary
-        env: # Or as an environment variable
-          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
-        run: |
-            if [ "${{github.repository}}" == "ardatan/graphql-toolkit" ] && [ "${{ secrets.NODE_AUTH_TOKEN }}" != "" ]
-            then
-                echo "//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" > .npmrc
-                npm run ci:release:canary
-            else    
-                echo "Fork PR: ${{github.repository}}"
-                echo "Skipping canary publish due to a fork/PR..."
-            fi
   test-on-windows:
     runs-on: windows-latest
     steps:
