--- a/packages/graphql-tag-pluck/package.json
+++ b/packages/graphql-tag-pluck/package.json
@@ -31,9 +31,11 @@
   },
   "devDependencies": {
     "@ardatan/bob": "0.1.8",
+    "@types/fs-extra": "8.0.1",
     "@types/jest": "24.0.25",
     "@types/node": "12.12.22",
     "@types/tmp": "0.1.0",
+    "fs-extra": "8.1.0",
     "graphql": "14.5.8",
     "jest": "24.9.0",
     "tmp": "0.1.0",
