--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,8 @@ jobs:
                 echo "Skipping canary publish due to a fork/PR..."
             fi
   test:
-    name: "Testing on {{matrix.os}} and {{matrix.node}}"
-    runs-on: {{matrix.os}}
+    name: Testing on ${{matrix.os}} and ${{matrix.node}}
+    runs-on: ${{matrix.os}}
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest]
