--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
                 echo "Skipping canary publish due to a fork/PR..."
             fi
   test:
-    name: Testing on ${{matrix.os}} and ${{matrix.node_version}}
+    name: Testing on ${{matrix.os}} and Node ${{matrix.node_version}}
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
